Added suppost of AUIL (Android Universal Image Loader). Images are loaded from links from Constants.java file

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="title_activity_home">HomeActivity</string>
     <string name="persons">Persons</string>
     <string name="map">Map</string>
+
+    <!-- Content descriptions -->
+    <string name="descr_image">Image</string>
 </resources>
