Added like and dislike buttons, fixed crash with no initImageLoader

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
 
     <!-- Content descriptions -->
     <string name="descr_image">Image</string>
+    <string name="btnDislike">dislike</string>
+    <string name="btnLike">like</string>
 </resources>
