--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="descr_image">Image</string>
     <string name="btnDislike">dislike</string>
     <string name="btnLike">like</string>
+    <string name="btnGenerate">generate</string>
 </resources>
